fix the mobile display by using xs columns that take up the whole row. however, ensure that only 50% of the logo is displayed on mobile devices.

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -61,7 +61,7 @@
 	}
 	@media only screen and (max-width: 766px) {
 	  	.logo {
-	    		float: none;
+	    		width: 50%;
 	  	}
 	}
 	
